tests/errors/err_ref_temporary.mix
// ERROR: cannot borrow a non-addressable expression
main()
    x = ref 1
